# cortex-gate

./: .continue-state.md  .gitignore  .rebuild-script.sh  Cargo.toml  LICENSE  Makefile  README.md  cargo-outdated-output.json  cortex-gate.desktop  cortex-gate.toon  launch-ui.sh
.pi/: best-practices.md  code-suggestions.md  descomposicion.md  extension-system-plan.md  project-context.md  sw-plan-hervd.md  ui-redesign-plan.md
docs/: origen-proyecto-perdido.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js  styles.css
frontend/src-tauri/: Cargo.toml  launcher.sh  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/extensions/: discovery.js  event-bus.js  registry.js
frontend/src/extensions/prompt-router/: manifest.js  page.js
frontend/src/pages/: config.js  dashboard.js  ecualizador.js  extensions.js
src/: lib.rs  main.rs
src/benchmark/: engine.rs  mod.rs  profiles.rs  scorer.rs  tests.rs
src/classifier/: dimensions.rs  embedding.rs  equation.rs  mod.rs
src/extensions/: context.rs  event_bus.rs  manager.rs  mod.rs  provider_plugin.rs
src/gateway/: auth.rs  mod.rs  providers.rs  routes.rs  server.rs  streaming.rs
src/governance/: alerts.rs  database.rs  mod.rs  quotas.rs  tracking.rs  users.rs
src/tools/: error.rs  logging.rs  mod.rs  provider.rs
