[package]
name = "cortex-gate"
version = "0.2.0"
edition = "2021"
description = "Cortex Gate — Intelligent AI Gateway with Autonomous Benchmarking, Embedding Routing, and Cost Governance"
authors = ["Luis Daniel Dos Santos"]
license = "PolyForm-Noncommercial-1.0.0"

[dependencies]
# Web framework & HTTP
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Async & concurrency
futures = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Bytes (re-exported by reqwest but needed for explicit types)
bytes = "1"

# Utilities
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
sha2 = "0.10"
hex = "0.4"
regex = "1"

# Tauri (desktop UI)
[features]
default = ["desktop"]
desktop = []

[dependencies.tauri]
version = "2"
features = []
optional = true

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[lib]
name = "cortex_gate"
path = "src/lib.rs"

[[bin]]
name = "cortex-gate"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
