[package]
name = "cortex-gate-tauri"
version = "0.1.0"
edition = "2021"
description = "Cortex Gate — Tauri Desktop UI"

[lib]
name = "cortex_gate_tauri"
path = "src/lib.rs"

[[bin]]
name = "cortex-gate-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
